--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<html>www.comprarcytotecbarato.com.br
-<head>
-<title>COMPRAR CYTOTEC</title>
-</head>
-<center>body bgcolor="white">
-<H1>COMPRAR CYTOTEC BARATO</H1>
-<P>ONDE E COMO COMPRAR CYTOTEC ABORTIVO</P>
-</body></center
+<html>
+<meta charset="utf-8">
+          <head>
+                  <img src="bg.png" height="50%"width="100%"></>
+                  <h1 style="coloer:cyan;" align="center">COMPRAR CYTOTEC</h1>
+                  <img src="foto.png" heigth="30% width="15%" align="left"></>
+          <head>
+          <body>  style="backgroud-color:white;">
+                    <h2 style="color:black;" align="center"> MEDICAMENTO ORIGINAL</h2>
+          </body>
 </html>
